Upgrade to Lucene 8.5.2